--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
+  width: 100%;
+  max-width: 100vw;
 }
 
 h4 {
@@ -132,8 +134,31 @@ input[type="submit"], button {
   .forecast-card {
       width: 90%;
   }
+  .body {
+    width: 100%
+  }
 }
 
 .App-logo {
   scale: 0.5;
+}
+
+.App-header {
+  width: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+#wizard {
+  position: absolute;
+  left: 0;
+  transition: left ease-in-out;
+  align-self: center;
+}
+
+.weather-hover {
+  border-width: 3;
+  border-color: #bb86fc; 
+  box-shadow: 0 0 8px #bb86fc; 
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
